--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     font-family: "Nunito Sans", sans-serif;
 }
 
+body {
+    background-color: white;
+}
+
 img {
     display: block;
     width: 250px;
@@ -18,7 +22,7 @@ p {
     width: 95%;
     height: auto;
 
-    margin: 7rem auto 0 auto;
+    margin: 5rem auto 0 auto;
 
     display: flex;
     align-content: center;
@@ -43,11 +47,19 @@ kbd {
     gap: 1rem;
     padding-bottom: 0.5rem;
 
-    background-color: #EEEEEE;
+    background-color: #fefefe;
     cursor: pointer;
     border: 1px solid black;
+
+    transition: transform 0.08s ease, border-color 0.08s ease;
 }
 
 .key:hover {
-    background-color: #e5e5e5;
+    background-color: #f7f7f7;
+}
+
+.playing {
+    transform: scale(1.1);
+    border-color: black;
+    /* box-shadow: 0 0 5px #969696; */
 }
